<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="update_list_posts">Update list</string>
    <string name="description_photo">Описание фото</string>
    <string name="remove">Удалить</string>
    <string name="description_select_photo">Choose photo</string>
    <string name="description_take_photo">Pick photo</string>
    <string name="menu_save">Save\n</string>
    <string name="sign_in">Sing in</string>
    <string name="sign_up">Sing up\n</string>
    <string name="sign_out">Sing out</string>
    <string name="enter">Enter in app</string>
    <string name="enter_text">Please enter your login and password</string>
    <string name="attention">"Please dont share your login and password other people "</string>
    <string name="attantion">Please dont share your login and password other people</string>
    <string name="emptyLoginOrPass">Login or pass can not empty</string>
    <string name="tryAgain">Try again,wrong login or pass</string>
    <string name="register">"Register your accaunt "</string>
    <string name="notification_user_new_post">Creat new post\n</string>
    <string name="notification_from_app">You have new notification\n</string>
    <string name="incorrect_pass">Incorrect password</string>
    <string name="something_wrong">Something wrong</string>
    <string name="error_task_cancelled">"Ошибка выполнения "</string>
    <string name="image_ad">ImageAd</string>
</resources>